--- a/SharePoint-CSOM/news2/resources/search/news-bycategory.css
+++ b/SharePoint-CSOM/news2/resources/search/news-bycategory.css
@@ -7,29 +7,42 @@
 	.news-control-newsbycategory {
 	}
 		.news-item-newsbycategory {
+			background-color: #cdd2da;
+			height: 175px;
+			margin-bottom: 10px;
+			position: relative;
+			overflow: hidden;
 		}
 			.news-item-newsbycategory > div {
-				background-color: #cdd2da;
+				background-color: rgba(205, 210, 218, 0.8);
+				box-sizing: border-box;
+				display: inline-block;
 				height: 175px;
-				margin-bottom: 10px;
-				position: relative;
-				overflow: hidden;
+				left: 118px;
+				padding: 15px;
+				position: absolute;
+				top: 0;
+				transition: 500ms all;
+  			}
+			.news-item-newsbycategory > div:hover {
+				left: 0;
+				transition: 500ms all;
   			}
 			.news-item-newsbycategory .news-item-newsbycategory-image {
+				display: inline-block;
+				width: 118px;
 				height: 175px;
 				position: relative;
 			}
 				.news-item-newsbycategory .news-item-newsbycategory-image > img {
-					width: 100%;
-				}			
+					position: absolute;
+					right: 0;
+				}
 			.news-item-newsbycategory .news-item-newsbycategory-caption {
-				display: inline-block;
-				padding: 15px;
-				position: absolute;
 			}
 				.news-item-newsbycategory .news-item-newsbycategory-caption h3 {
 					color: #41596b;
-					font-size: 1.2em;
+					font-size: 1.5em;
 					font-weight: bold;
 					margin: 0 0 8px;
 					text-transform: uppercase;
@@ -40,12 +53,15 @@
 					margin: 0;
 				}
 			.news-item-newsbycategory .news-item-newsbycategory-link {
+				background-color: rgb(205, 210, 218);
+				background-color: rgba(205, 210, 218, 0.85);
 				bottom: 0;
-				display: inline-block;
 				font-weight: bold;
-				padding: 15px;
+				left: 0;
+				padding: 15px 0 15px 15px;
 				position: absolute;
 				text-transform: uppercase;
+				width: 100%;
 			}
 				.news-item-newsbycategory .news-item-newsbycategory-link .fa {
 					color: #59176b;
@@ -57,7 +73,8 @@
 				}
 				.news-item-newsbycategory .news-item-newsbycategory-link:hover {
 					text-decoration: none;
-					opacity: 0.8;
+					color: #002596;
+					opacity: 1;
 				}
 
 @media screen and (max-width: 980px) {
