fixed iphone/ipad styling rules for news by category
- fixed iphone/ipad styling rules for news by category
- added support in FOC feature to enable full-width single column pages

--- a/SharePoint-CSOM/news2/resources/search/news-bycategory.css
+++ b/SharePoint-CSOM/news2/resources/search/news-bycategory.css
@@ -81,6 +81,21 @@
 }
 
 @media screen and (max-width: 768px) {
+	.news-control-newsbycategory-wrapper {
+   	margin-right: 0;
+	}
+	.news-item-newsbycategory {
+		height: 125px;
+	}
+	.news-item-newsbycategory .news-item-newsbycategory-image {
+		height: 125px;
+	}
+	.news-item-newsbycategory > div {
+		height: 125px;
+	}
+	.news-item-newsbycategory .news-item-newsbycategory-link {
+		padding: 10px 0 10px 15px
+	}
 }
 
 @media screen and (max-width: 480px) {
@@ -90,4 +105,10 @@
 }
 
 @media screen and (max-width: 320px) {
+	.news-item-newsbycategory > div {
+		left: 0;
+	}
+	.news-item-newsbycategory .news-item-newsbycategory-image {
+		display: none;
+	}
 }
