--- a/SharePoint-CSOM/news2/resources/search/news-bycategory.css
+++ b/SharePoint-CSOM/news2/resources/search/news-bycategory.css
@@ -8,7 +8,7 @@
 	}
 		.news-item-newsbycategory {
 			background-color: #cdd2da;
-			height: 175px;
+			height: 155px;
 			margin-bottom: 10px;
 			position: relative;
 			overflow: hidden;
@@ -17,9 +17,9 @@
 				background-color: rgba(205, 210, 218, 0.8);
 				box-sizing: border-box;
 				display: inline-block;
-				height: 175px;
+				height: 155px;
 				left: 118px;
-				padding: 15px;
+				padding: 10px 15px 15px;
 				position: absolute;
 				top: 0;
 				transition: 500ms all;
@@ -31,7 +31,7 @@
 			.news-item-newsbycategory .news-item-newsbycategory-image {
 				display: inline-block;
 				width: 118px;
-				height: 175px;
+				height: 155px;
 				position: relative;
 			}
 				.news-item-newsbycategory .news-item-newsbycategory-image > img {
@@ -42,7 +42,7 @@
 			}
 				.news-item-newsbycategory .news-item-newsbycategory-caption h3 {
 					color: #41596b;
-					font-size: 1.5em;
+					font-size: 1.2em;
 					font-weight: bold;
 					margin: 0 0 8px;
 					text-transform: uppercase;
@@ -58,7 +58,7 @@
 				bottom: 0;
 				font-weight: bold;
 				left: 0;
-				padding: 15px 0 15px 15px;
+				padding: 10px 0 10px 15px;
 				position: absolute;
 				text-transform: uppercase;
 				width: 100%;
