--- a/SharePoint-CSOM/news2/resources/css/news-responsive.css
+++ b/SharePoint-CSOM/news2/resources/css/news-responsive.css
@@ -21,10 +21,11 @@
 	max-width: 1440px;
 }
 
-article,aside,details,figcaption,figure,
+/*article,aside,details,figcaption,figure,
 footer,header,hgroup,nav,section,summary {
 	display: block;
 }
+*/
 
 /* ==========================================================================
  Media Queries
