--- a/SharePoint-CSOM/buzz365/resources/Buzz365-responsive-v2.master
+++ b/SharePoint-CSOM/buzz365/resources/Buzz365-responsive-v2.master
@@ -40,6 +40,7 @@
     <script language="javascript" type="text/javascript" src="/_catalogs/masterpage/Buzz365/js/jquery-2.1.1.min.js"></script>
     <script language="javascript" type="text/javascript" src="/_catalogs/masterpage/Buzz365/js/jquery.sidr.min.js"></script>
     <script language="javascript" type="text/javascript" src="/_catalogs/masterpage/Buzz365/js/site.js"></script>
+    <script language="javascript" type="text/javascript" src="/_catalogs/masterpage/Buzz365/js/megamenu.js"></script>
 
     <SharePoint:AjaxDelta id="DeltaPlaceHolderAdditionalPageHead" Container="false" runat="server">
         <asp:ContentPlaceHolder id="PlaceHolderAdditionalPageHead" runat="server" />
@@ -565,422 +566,15 @@
 
 <!-- START MEGA MENU/MEGA-MENU -->
 <section id="main-menu" class='ms-dialogHidden'>
+  <!-- placeholder megamenu markup -->
   <nav>
-      <ul class="nav">
-          <li>
-              <a class="pink" href="#">About RB</a>
-              <!-- Start of Menu Content -->
-              <div>
-                  <div class="nav-column">
-                      <h3>About Us
-                      </h3>
-                      <ul>
-                          <li>
-                              <a href="#">Who We Are
-                              </a>
-                          </li>
-                          <li>
-                              <a href="#">Global Company Fact Sheet
-                              </a>
-                          </li>
-                          <li>
-                              <a href="#">Latest Corporate Presentation
-                              </a>
-                          </li>
-                          <li>
-                              <a href="#">Corporate Brochure
-                              </a>
-                          </li>
-                          <li>
-                              <a href="#">Vision and Values
-                              </a>
-                          </li>
-                          <li>
-                              <a href="#">RB Brands
-                              </a>
-                          </li>
-                          <li>
-                              <a href="#">RB Results
-                              </a>
-                          </li>
-                          <li>
-                              <a href="#">RB History
-                              </a>
-                          </li>
-                      </ul>
-                  </div>
-                  <div class="nav-column">
-                      <h3>Better Business
-                      </h3>
-                      <ul>
-                          <li>
-                              <a href="#">Save the Children
-                              </a>
-                          </li>
-                          <li>
-                              <a href="#">Healthier Kids, Happier Homes
-                              </a>
-                          </li>
-                          <li>
-                              <a href="#">Healthier Communities
-                              </a>
-                          </li>
-                          <li>
-                              <a href="#">Health and Hygiene Programmes
-                              </a>
-                          </li>
-                          <li>
-                          </li>
-                          <li>
-                              <a href="#">Why is it important to us?
-                              </a>
-                          </li>
-                          <li>
-                              <a href="#">Happier Homes
-                              </a>
-                          </li>
-                          <li>
-                              <a href="#">Our Targets
-                              </a>
-                          </li>
-                          <li>
-                              <a href="#">Better Design
-                              </a>
-                          </li>
-                          <li>
-                              <a href="#">Better Production
-                              </a>
-                          </li>
-                          <li>
-                              <a href="#">Trees for Change
-                              </a>
-                          </li>
-                          <li>
-                              <a href="#">Policies and Reports
-                              </a>
-                          </li>
-                      </ul>
-                  </div>
-                  <div class="nav-column">
-                      <h3>Leadership Team
-                      </h3>
-                      <ul>
-                          <li>
-                              <a href="#">Board of Directors
-                              </a>
-                          </li>
-                          <li>
-                              <a href="#">Executive Committee
-                              </a>
-                          </li>
-                          <li>
-                              <a href="#">Top 40 Biographies &amp; Assistants
-                              </a>
-                          </li>
-                          <li>
-                              <a href="#">Top 40 Organisation
-                              </a>
-                          </li>
-                          <li>
-                              <a href="#">Key Contacts
-                              </a>
-                          </li>
-                      </ul>
-                  </div>
-                  <div class="nav-column">
-                      <h3>A Speedy Guide
-                      </h3>
-                      <h3>RB Addresses
-                      </h3>
-                  </div>
-              </div>
-          </li>
-          <li>
-              <a class="blue" href="#">News
-              </a>
-              <div>
-                  <div class="nav-column">
-                      <h3>News
-                      </h3>
-                      <ul>
-                          <li>
-                              <a href="#">Announcements
-                              </a>
-                          </li>
-                          <li>
-                              <a href="#">Fast Forward
-                              </a>
-                          </li>
-                          <li>
-                              <a href="#">Management Appointments
-                              </a>
-                          </li>
-                          <li>
-                              <a href="#">Better Business
-                              </a>
-                          </li>
-                          <li>
-                              <a href="#">RB in the News
-                              </a>
-                          </li>
-                      </ul>
-                  </div>
-                  <div class="nav-column">
-                      <h3>Investors and Media
-                      </h3>
-                      <ul>
-                          <li>
-                              <a href="#">Corporate Governance
-                              </a>
-                          </li>
-                          <li>
-                              <a href="#">Investor Information
-                              </a>
-                          </li>
-                          <li>
-                              <a href="#">Press Coverage
-                              </a>
-                          </li>
-                          <li>
-                              <a href="#">Press Releases
-                              </a>
-                          </li>
-                      </ul>
-                  </div>
-                  <div class="nav-column">
-                      <h3>Results and Performance
-                      </h3>
-                      <ul>
-                          <li>
-                              <a href="#">Global Company Fact Sheet Category Performance
-                              </a>
-                          </li>
-                          <li>
-                              <a href="#">Results and Financial Calendar Share Price Information
-                              </a>
-                          </li>
-                      </ul>
-                  </div>
-              </div>
-          </li>
-          <li>
-              <a class="yellow" href="#">Functions
-              </a>
-              <div>
-                  <div class="nav-column">
-                      <h3>Category
-                      </h3>
-                      <ul>
-                          <li>
-                              <a href="#">CMI
-                              </a>
-                          </li>
-                          <li>
-                              <a href="#">Brandhub
-                              </a>
-                          </li>
-                          <li>
-                              <a href="#">Health
-                              </a>
-                          </li>
-                          <li>
-                              <a href="#">Hygiend DSP
-                              </a>
-                          </li>
-                          <li>
-                              <a href="#">Hygiend GPPC
-                              </a>
-                          </li>
-                          <li>
-                              <a href="#">Home
-                              </a>
-                          </li>
-                          <li>
-                              <a href="#">Marketing Excellence
-                              </a>
-                          </li>
-                          <li>
-                              <a href="#">GBI Computer News &amp; Intelligence
-                              </a>
-                          </li>
-                          <li>
-                              <a href="#">Media
-                              </a>
-                          </li>
-                          <li>
-                              <a href="#">R&amp;D
-                              </a>
-                          </li>
-                      </ul>
-                  </div>
-                  <div class="nav-column mid">
-                      <h3>Finance
-                      </h3>
-                      <ul>
-                          <li>
-                              <a href="#">Corporate Control
-                              </a>
-                          </li>
-                          <li>
-                              <a href="#">Internal Audit
-                              </a>
-                          </li>
-                      </ul>
-                  </div>
-                  <div class="nav-column thin">
-                      <h3>HR
-                      </h3>
-                      <h3>Legal
-                      </h3>
-                  </div>
-                  <div class="nav-column">
-                      <h3>Information Services
-                      </h3>
-                      <ul>
-                          <li>
-                              <a href="#">Assist
-                              </a>
-                          </li>
-                          <li>
-                              <a href="#">CC- GRC
-                              </a>
-                          </li>
-                          <li>
-                              <a href="#">PD - TPS
-                              </a>
-                          </li>
-                          <li>
-                              <a href="#">PD - IOS
-                              </a>
-                          </li>
-                          <li>
-                              <a href="#">PD - ISGS
-                              </a>
-                          </li>
-                          <li>
-                              <a href="#">PD - UTS EXT
-                              </a>
-                          </li>
-                          <li>
-                              <a href="#">CC - GSIS
-                              </a>
-                          </li>
-                          <li>
-                              <a href="#">PD - CSR
-                              </a>
-                          </li>
-                      </ul>
-                  </div>
-                  <div class="nav-column thin">
-                      <h3>RBP
-                      </h3>
-                      <h3>Supply
-                      </h3>
-                      <h3>Sales
-                      </h3>
-                  </div>
-              </div>
-          </li>
-          <li>
-              <a class="green" href="#">IMEx
-              </a>
-              <div>
-                  <div class="nav-column">
-                      <h3>ENA
-                      </h3>
-                      <ul>
-                          <li>
-                              <a href="#">Veet
-                              </a>
-                          </li>
-                          <li>
-                              <a href="#">Finish
-                              </a>
-                          </li>
-                          <li>
-                              <a href="#">Vanish
-                              </a>
-                          </li>
-                          <li>
-                              <a href="#">Gaviscon
-                              </a>
-                          </li>
-                          <li>
-                              <a href="#">Mucinex
-                              </a>
-                          </li>
-                          <li>
-                              <a href="#">ENA HQ
-                              </a>
-                          </li>
-                          <li>
-                              <a href="#">Northern Europe
-                              </a>
-                          </li>
-                          <li>
-                              <a href="#">Southern Europe
-                              </a>
-                          </li>
-                          <li>
-                              <a href="#">Central Europe
-                              </a>
-                          </li>
-                          <li>
-                              <a href="#">Western Europe
-                              </a>
-                          </li>
-                          <li>
-                              <a href="#">North America
-                              </a>
-                          </li>
-                      </ul>
-                  </div>
-                  <div class="nav-column">
-                      <h3>LAPAC
-                      </h3>
-                      <ul>
-                          <li>
-                              <a href="#">Australia &amp; New Zealand
-                              </a>
-                          </li>
-                          <li>
-                              <a href="#">North Asia
-                              </a>
-                          </li>
-                          <li>
-                              <a href="#">LATAM
-                              </a>
-                          </li>
-                          <li>
-                              <a href="#">South East Asia
-                              </a>
-                          </li>
-                      </ul>
-                  </div>
-                  <div class="nav-column">
-                      <h3>RUMEA
-                      </h3>
-                      <ul>
-                          <li>
-                              <a href="#">NAMET
-                              </a>
-                          </li>
-                          <li>
-                              <a href="#">Sub-Saharan Africa
-                              </a>
-                          </li>
-                          <li>
-                              <a href="#">Russia and CIS
-                              </a>
-                          </li>
-                      </ul>
-                  </div>
-              </div>
-          </li>
-          <li>
-              <a class="orange" href="http://myrb/" target="_blank">My RB</a>
-          </li>
-      </ul>
+    <ul class="nav">
+      <li><a title="about rb" id="" href="javascript:;" class="pink">ABOUT RB</a></li>
+      <li><a title="news" id="" href="javascript:;" class="blue">NEWS</a></li>
+      <li><a title="functions" id="" href="javascript:;" class="yellow">FUNCTIONS</a></li>
+      <li><a title="IMEx" id="" href="javascript:;" class="green">IMEx</a></li>
+      <li><a title="myRB" id="" href="https://myRB" class="orange">MY RB</a></li>
+    </ul>
   </nav>
 </section>
 <!-- END MEGA MENU/MEGA-MENU -->
