side navigation changeset 2
-updated fontawesome to 4.3.0
-updated TaxonomyDatastore caching
-updated Buzz365 masterpages
-added stock Buzz365 pagelayouts
-updated sidenavigation
-updated megamenu

--- a/SharePoint-CSOM/buzz365/resources/css/custom.css
+++ b/SharePoint-CSOM/buzz365/resources/css/custom.css
@@ -650,6 +650,15 @@ section#main-menu {
 }
 
 /* ==========================================================================
+Default Side Navigation / Left Navigation
+========================================================================== */
+
+.tax-sidenav0-default {
+
+}
+
+
+/* ==========================================================================
  Layout
  ========================================================================== */
 
