--- a/SharePoint-CSOM/buzz365/resources/Buzz365-responsive-v1.master
+++ b/SharePoint-CSOM/buzz365/resources/Buzz365-responsive-v1.master
@@ -543,7 +543,7 @@
             </li>
             <li id='rb-buzzbee' class='badge'>
                 <a href="javascript:;" title="go to the 'Buzz'">
-                  &nbsp;<i class="fa fa-cloud fa-lg"></i>
+                  &nbsp;<i class="fa fa-forumbee fa-lg"></i>
                 </a>
             </li>
         </ul>
